Continue pattern refactoring